add .editorconfig and update tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -7,5 +7,10 @@ exclude =
     .idea,
     .vscode
     .build
-    views
-    temp.py
+    build
+    dist,
+    *.pyc,
+    *.egg-info,
+    .cache,
+    .eggs
+
